--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,41 @@
     height: 100vh;
     min-height: 500px;
     background-image: url("../img/skyline.jpg");
-    background-size: cover;
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     letter-spacing: 1px;
 }
 
 .masthead_sec {
-    height: 100vh;
     min-height: 500px;
     background-image: url("../img/skyline.jpg");
-    background-size: cover;
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     letter-spacing: 1px;
 }
 
 .profilepic {
     height: 30rem;
+}
+
+.fa-microblog {
+    font-size: 3rem;
+}
+
+.parsley-required {
+    color: red;
+}
+
+.card-img-bottom {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
+
+.post-img {
+    width: 100%;
 }
